# chip

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.coq.local  Makefile.ml-files  README.md  _CoqProject  chip-opt.opam  chip-plain.opam  chip.opam  coq-chip.opam  impacted-rbt.opam  impacted.opam  index.html  meta.yml
.github/workflows/: docker-action.yml
core/: acyclic.v  change.v  check.v  check_seq.v  check_seq_hierarchical.v  close_dfs.v  closure.v  closure_example.v  connect.v  dfs_set.v  extra.v  finn.v  finn_set.v  hierarchical.v  hierarchical_correct.v  hierarchical_sub.v  hierarchical_sub_correct.v  hierarchical_sub_pt.v  hierarchical_sub_pt_correct.v  kosaraju.v  kosaraju_acyclic.v  ordtype.v  run.v  run_seq.v  string.v  tarjan.v  tarjan_acyclic.v  topos.v
docs/v1.0/coqdoc/: chip.acyclic.html  chip.change.html  chip.check.html  chip.check_seq.html  chip.check_seq_hierarchical.html  chip.close_dfs.html  chip.closure.html  chip.closure_example.html  chip.connect.html  chip.dfs_set.html  chip.extra.html  chip.extract_impacted.html  chip.extract_impacted_rbt.html  chip.finn.html  chip.finn_set.html  chip.hierarchical.html  chip.hierarchical_correct.html  chip.hierarchical_sub.html  chip.hierarchical_sub_correct.html  chip.hierarchical_sub_pt.html  chip.hierarchical_sub_pt_correct.html  chip.kosaraju.html  chip.kosaraju_acyclic.html  chip.ordtype.html  chip.string.html  chip.tarjan.html  chip.tarjan_acyclic.html  chip.topos.html  indexpage.html  toc.html
extraction/impacted/: .gitignore  Makefile
extraction/impacted-rbt/: .gitignore  Makefile
extraction/impacted-rbt/coq/: extract_impacted_rbt.v
extraction/impacted-rbt/ocaml/: change_impact.ml  change_impact.mli  filtering.ml  filteringinv.ml  hierarchical.ml  hierarchicalignoreimpacted.ml  hierarchicalignoreimpactedpt.ml  hierarchicalignorept.ml  hierarchicalimpacted.ml  topfiltering.ml
extraction/impacted/coq/: extract_impacted.v
extraction/impacted/ocaml/: change_impact.ml  change_impact.mli  filtering.ml  filteringinv.ml  hierarchicalignore.ml  hierarchicalpt.ml  ids.ml  modified.ml  neighbors.ml  topfiltering.ml  util.ml
extraction/impacted/scripts/: remove_module.pl
extraction/impacted/test/: new-hierarchical-coq.json  new-hierarchical.json  new-topsort.json  new.json  old-hierarchical-coq.json  old-hierarchical.json  old-topsort.json  old.json
resources/: index.html  index.md
