opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/chip"
bug-reports: "https://github.com/palmskog/chip/issues"
dev-repo: "git+https://github.com/palmskog/chip.git"
license: "MIT"
synopsis: "Plain certified tool for change impact analysis"

build: [make "-j%{jobs}%" "impacted"]
depends: [
  "ocaml" {>= "4.05" & < "4.10"}
  "coq" {>= "8.13"}
  "coq-mathcomp-ssreflect" {>= "1.12.0"}
  "coq-mathcomp-fingroup"
  "ocamlbuild" {build}
  "yojson"  {>= "1.4.1"}
  "extlib" {>= "1.7.5"}
]

authors: [
  "Karl Palmskog"
]
