opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/palmskog/chip"
dev-repo: "https://github.com/palmskog/chip.git"
bug-reports: "https://github.com/palmskog/chip/issues"
license: "MIT"

build: [ make "-j%{jobs}%" ]
install: [ make "install" ]
remove: [ "sh" "-c" "rm -rf '%{lib}%/coq/user-contrib/chip'" ]
depends: [
  "coq" {>= "8.8" & < "8.10~"}
  "coq-mathcomp-ssreflect" {>= "1.7.0" & < "1.8"}
  "coq-mathcomp-fingroup"
]

tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Correctness proofs of algorithms"
  "keyword:change impact analysis"
  "keyword:graph theory"
]
authors: [
  "Karl Palmskog <>"
]
