opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/chip"
dev-repo: "git+https://github.com/palmskog/chip.git"
bug-reports: "https://github.com/palmskog/chip/issues"
license: "MIT"

synopsis: "Formalization of change impact analysis"
description: """
Coq specification and executable functions
for change impact analysis, as used in build systems
and tools for regression test selection.
"""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.8" & < "8.10~"}
  "coq-mathcomp-ssreflect" {>= "1.7" & < "1.8"}
  "coq-mathcomp-fingroup"
]

tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Correctness proofs of algorithms"
  "keyword:change impact analysis"
  "keyword:graph theory"
  "logpath:chip"
]
authors: [
  "Cyril Cohen"
  "Aleksandar Nanevski"
  "Karl Palmskog"
  "Laurent Théry"
]
