opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/palmskog/chip"
dev-repo: "https://github.com/palmskog/chip.git"
bug-reports: "https://github.com/palmskog/chip/issues"
license: "MIT"

build: [ make "-j%{jobs}%" "impacted" ]
depends: [
  "coq" {>= "8.8" & < "8.10~"}
  "coq-mathcomp-ssreflect" {>= "1.7" & < "1.8"}
  "coq-mathcomp-fingroup"
  "ocamlbuild" {build}
  "yojson"  {>= "1.4.1"}
  "extlib" {>= "1.7.5"}
]

authors: [
  "Karl Palmskog <palmskog@gmail.com>"
]
